--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "scripts": {
     "start": "electron .",
     "dist": "electron-builder",
-    "test": "jest"
+    "rebuild": "electron-rebuild",
+    "test": "npm run rebuild && jest"
   },
   "author": "Your Name",
-  "devDependencies": {
-    "electron": "36.3.1",
-    "electron-builder": "26.0.15",
-    "jest": "^29.0.0"
-  },
   "dependencies": {
-    "better-sqlite3": "11.10.0"
+    "better-sqlite3": "^11.10.0"
+  },
+  "devDependencies": {
+    "@electron/rebuild": "^4.0.1",
+    "electron": "36.3.2",
+    "electron-builder": "26.0.15",
+    "jest": "^29.7.0"
   },
   "build": {
     "appId": "com.example.modelviewerapp",
