--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
   "scripts": {
     "start": "electron .",
     "dist": "electron-builder",
-    "rebuild": "electron-rebuild",
-    "test": "npm run rebuild && jest"
+    "rebuild": "electron-rebuild"
   },
-  "author": "Your Name",
+  "author": "Daan Bouwman",
   "dependencies": {
     "better-sqlite3": "^11.10.0"
   },
   "devDependencies": {
     "@electron/rebuild": "^4.0.1",
     "electron": "36.3.2",
-    "electron-builder": "26.0.15",
-    "jest": "^29.7.0"
+    "electron-builder": "26.0.15"
   },
   "build": {
     "appId": "com.example.modelviewerapp",
