--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
-build-from-source=better-sqlite3
+# build-from-source=true
+# runtime=electron
+# target=39.0.0
+# disturl=https://electronjs.org/headers
