--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@electron/rebuild": "^4.0.1",
     "electron": "^39.0.0",
-    "electron-builder": "^26.0.12",
+    "electron-builder": "26.1.0",
     "jest": "^30.2.0",
     "prettier": "^3.6.2"
   },
