--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@electron/rebuild": "^4.0.1",
-    "electron": "^39.0.0",
-    "electron-builder": "^26.0.12",
+    "electron": "^38.0.0",
+    "electron-builder": "26.1.0",
     "jest": "^30.2.0",
     "prettier": "^3.6.2"
   },
