--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "rebuild": "electron-rebuild",
     "test": "jest",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "postinstall": "electron-builder install-app-deps"
   },
   "author": "Daan Bouwman",
   "dependencies": {
     "better-sqlite3": "^12.4.1"
   },
   "devDependencies": {
-    "@electron/rebuild": "^4.0.1",
     "electron": "^38.0.0",
     "electron-builder": "26.1.0",
     "jest": "^30.2.0",
