--- a/package.json
+++ b/package.json
@@ -2,60 +2,38 @@
   "name": "modelviewer-app",
   "version": "1.0.0",
   "description": "My Model Slideshow Viewer",
-  "main": "main/main.js",
+  "main": ".vite/build/main.js",
   "scripts": {
-    "start": "electron .",
-    "dist": "electron-builder",
-    "rebuild": "electron-rebuild",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
     "test": "jest",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "postinstall": "electron-builder install-app-deps"
+    "format:check": "prettier --check ."
   },
   "author": "Daan Bouwman",
   "dependencies": {
-    "better-sqlite3": "^12.4.1"
+    "better-sqlite3": "^12.0.0",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
-    "@tailwindcss/forms": "^0.5.10",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@electron-forge/cli": "^7.5.0",
+    "@electron-forge/maker-deb": "^7.5.0",
+    "@electron-forge/maker-rpm": "^7.5.0",
+    "@electron-forge/maker-squirrel": "^7.5.0",
+    "@electron-forge/maker-zip": "^7.5.0",
+    "@electron-forge/plugin-fuses": "^7.5.0",
+    "@electron-forge/plugin-vite": "^7.5.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "@vitejs/plugin-vue": "^6.0.1",
     "babel-jest": "^30.2.0",
     "electron": "^38.0.0",
-    "electron-builder": "26.1.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-    "prettier": "^3.6.2"
-  },
-  "build": {
-    "appId": "com.example.modelviewerapp",
-    "productName": "ModelViewerApp",
-    "directories": {
-      "output": "dist"
-    },
-    "win": {
-      "target": [
-        "nsis"
-      ],
-      "icon": "build/icon.ico"
-    },
-    "files": [
-      "!node_modules/@electron/**",
-      "!node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
-      "!node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
-      "!node_modules/*.d.ts",
-      "!node_modules/.bin",
-      "!**/*.{o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
-      "!.editorconfig",
-      "!electron-builder.yml",
-      "!Gruntfile.js",
-      "!LICENSE.txt",
-      "!Makefile",
-      "!package-lock.json",
-      "!tslint.json",
-      "!yarn.lock",
-      "!build/icon.*"
-    ],
-    "asar": true
+    "prettier": "^3.3.3",
+    "vite": "7.1.12"
   }
 }
