--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "babel-jest": "^30.2.0",
     "electron": "^38.0.0",
+    "fs-extra": "^11.3.2",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "prettier": "^3.3.3",
