feat: disable sandbox for Electron app in CI environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,11 +129,13 @@ jobs:
 
       - name: Start Electron app (Linux)
         if: runner.os == 'Linux'
+        env:
+          ELECTRON_DISABLE_SANDBOX: 1
         run: |
           export DISPLAY=:99
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          # Run Electron with --no-sandbox flag for CI environment
-          timeout 15s npm start -- --no-sandbox || if [ $? -eq 124 ]; then echo "App started successfully"; exit 0; else exit 1; fi
+          # Run Electron with disabled sandbox for CI environment
+          timeout 15s npm start || if [ $? -eq 124 ]; then echo "App started successfully"; exit 0; else exit 1; fi
 
       - name: Start Electron app (Windows)
         if: runner.os == 'Windows'
