--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check ."
   },
   "author": "Daan Bouwman",
+  "license": "MIT",
   "dependencies": {
     "better-sqlite3": "^12.0.0",
     "vue": "^3.5.12"
