--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,12 @@ jobs:
 
   electron-build:
     name: Build Electron App (${{ matrix.os }})
+    needs: test
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        # Only build Linux for PRs to save time, build both for main branch
+        os: ${{ github.event_name == 'pull_request' && fromJSON('["ubuntu-latest"]') || fromJSON('["ubuntu-latest", "windows-latest"]') }}
 
     runs-on: ${{ matrix.os }}
 
@@ -67,17 +69,24 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-electron-
 
+      - name: Cache native modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules/better-sqlite3
+            node_modules/.bin
+          key: ${{ runner.os }}-native-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-native-modules-
+
       - name: Install dependencies
         run: npm ci
 
-      - name: Package Electron app
-        run: npm run package
-
       - name: Make distributables
         run: npm run make
-
-      - name: Make distributables
-        run: npm run make
+        env:
+          # Skip native module rebuild if already cached
+          ELECTRON_SKIP_BINARY_DOWNLOAD: 1
 
       - name: Verify build artifacts
         shell: bash
@@ -94,7 +103,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        # Only test Linux for PRs to save time, test both for main branch
+        os: ${{ github.event_name == 'pull_request' && fromJSON('["ubuntu-latest"]') || fromJSON('["ubuntu-latest", "windows-latest"]') }}
 
     runs-on: ${{ matrix.os }}
 
