--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "preview": "electron-vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
     "package": "npm run build && electron-builder",
     "package:win": "npm run build && electron-builder --win",
     "package:mac": "npm run build && electron-builder --mac",
@@ -56,11 +59,14 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/ui": "^4.0.6",
     "electron": "^39.0.0",
     "electron-builder": "^26.1.0",
     "electron-vite": "^4.0.1",
     "fs-extra": "^11.3.2",
+    "happy-dom": "^20.0.10",
     "prettier": "^3.3.3",
-    "vite": "7.1.12"
+    "vite": "7.1.12",
+    "vitest": "^4.0.6"
   }
 }
