test: add comprehensive test suite for core modules
- Create tests for media-scanner module (13 tests)
  - Test file discovery (images, videos, recursive)
  - Test directory scanning (multiple directories, merging, etc.)
  - Test edge cases (empty dirs, non-existent paths, etc.)

- Create tests for database module (20 tests)
  - Test initialization and re-initialization
  - Test view count recording and retrieval
  - Test model caching functionality
  - Test directory management
  - Test error handling and timeouts

- Create tests for database-worker module (24 tests)
  - Test worker initialization
  - Test all database operations via worker messages
  - Test media view recording and retrieval
  - Test model caching
  - Test directory CRUD operations
  - Test error handling

- Add 'type: module' to package.json to eliminate ES module warnings
- Fix concurrent database transaction test
- All 62 tests passing

This provides comprehensive coverage of the core data layer.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "My Model Slideshow Viewer",
   "main": "out/main/index.js",
+  "type": "module",
   "scripts": {
     "dev": "electron-vite dev",
     "build": "electron-vite build",
