feat: achieve 80%+ test coverage with Istanbul
- Switch from V8 to Istanbul coverage provider for proper ESM/worker support
- Refactor database-worker.js into testable functions (database-worker-functions.js)
- Add 45 comprehensive tests for database worker functions (80.15% coverage)
- Add 8 comprehensive tests for useAppState composable (100% coverage)
- Configure vitest.config.mjs with Istanbul provider and coverage thresholds
- Clean up package.json dependencies (remove unused @vitest/coverage-v8)

Coverage Results:
- Overall: 82.71% statements, 80.66% branches, 94.91% functions, 83.67% lines
- database-worker-functions.js: 80.15% statements
- useAppState.js: 100% all metrics
- media-scanner.js: 83.33% statements
- useSlideshow.js: 81.45% statements
- constants.js: 100% all metrics

All files now meet or exceed 80% coverage thresholds.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "package": "npm run build && electron-builder",
     "package:win": "npm run build && electron-builder --win",
     "package:mac": "npm run build && electron-builder --mac",
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-istanbul": "^4.0.6",
     "@vitest/ui": "^4.0.6",
     "electron": "^39.0.0",
     "electron-builder": "^26.1.0",
