--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "happy-dom": "^20.0.10",
     "prettier": "^3.3.3",
     "vite": "7.1.12",
+    "vite-plugin-istanbul": "^7.2.0",
     "vitest": "^4.0.6"
   }
 }
