--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@tailwindcss/forms": "^0.5.9",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-istanbul": "^4.0.6",
+    "@vitest/coverage-v8": "^4.0.6",
+    "@vue/test-utils": "^2.4.6",
     "electron": "^39.0.0",
     "electron-builder": "^26.1.0",
     "electron-vite": "^4.0.1",
@@ -69,7 +71,6 @@
     "prettier": "^3.3.3",
     "vite": "7.1.12",
     "vite-plugin-istanbul": "^7.2.0",
-    "vitest": "^4.0.6",
-    "@vitest/coverage-v8": "^4.0.6"
+    "vitest": "^4.0.6"
   }
 }
