--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
   },
   "dependencies": {
     "sqlite3": "^5.1.7",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-istanbul": "^4.0.6",
     "@vue/test-utils": "^2.4.6",
@@ -68,8 +68,9 @@
     "electron-vite": "^4.0.1",
     "happy-dom": "^20.0.10",
     "prettier": "^3.3.3",
-    "vite": "7.1.12",
+    "vite": "^7.1.12",
     "vite-plugin-istanbul": "^7.2.0",
-    "vitest": "^4.0.6"
+    "vitest": "^4.0.6",
+    "@tailwindcss/vite": "^4.1.17"
   }
 }
