--- a/compose.yaml
+++ b/compose.yaml
@@ -14,5 +14,6 @@ services:
       - /app/node_modules
     devices:
       - /dev/dri:/dev/dri
-    network_mode: host
+    ports:
+      - '5173:5173'
     ipc: host
