--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
   },
   "dependencies": {
     "sqlite3": "^5.1.7",
-    "vue": "^3.5.12",
-    "tailwindcss": "^4.1.17"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
@@ -71,6 +70,7 @@
     "vite": "^7.1.12",
     "vite-plugin-istanbul": "^7.2.0",
     "vitest": "^4.0.6",
-    "@tailwindcss/vite": "^4.1.17"
+    "@tailwindcss/vite": "^4.1.17",
+    "tailwindcss": "^4.1.17"
   }
 }
