--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "Album Viewer Dev Container",
-  "dockerComposeFile": "docker-compose.yml",
-  "service": "app",
+  "dockerComposeFile": "../compose.yaml",
+  "service": "devcontainer",
   "workspaceFolder": "/app",
   "customizations": {
     "vscode": {
