--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,5 @@
 services:
-  vue-dev:
+  devcontainer:
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -10,10 +10,21 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ${XDG_RUNTIME_DIR}:${XDG_RUNTIME_DIR}
-      - ./:/app
-      - /app/node_modules
+      - ./:/app:cached
+      - try-node-node_modules:/app/node_modules
     devices:
       - /dev/dri:/dev/dri
-    ports:
-      - '5173:5173'
+    network_mode: host
     ipc: host
+    develop:
+      watch:
+        - action: sync
+          path: ./src
+          target: /app/src
+        - action: rebuild
+          path: package.json
+        - action: rebuild
+          path: package-lock.json
+
+volumes:
+  try-node-node_modules:
