Feat devcontainer setup (#73)
* feat: Add devcontainer configuration

This commit introduces a VS Code devcontainer to provide a consistent and isolated development environment.

The setup uses Docker Compose and includes a Dockerfile with all necessary dependencies for running the Electron application with GUI support from within the container. The devcontainer is configured to automatically run 'npm install' on creation and uses the Node.js 24 LTS version.

* refactor: Update devcontainer configuration to use Dockerfile.dev and change workspace folder to /app

* feat: Add node_modules volume to devcontainer configuration

* refactor: Update devcontainer configuration to use new compose file and service name

* refactor: Remove .git from .dockerignore

* feat: Update devcontainer configuration and add peer dependency in package-lock

* format

* chore: Update @vitest packages to version 4.0.8 and related dependencies

* refactor: Clean up devcontainer configuration by removing unused mounts and renaming volume

---------

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,5 @@
 services:
-  vue-dev:
+  devcontainer:
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -10,10 +10,18 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ${XDG_RUNTIME_DIR}:${XDG_RUNTIME_DIR}
-      - ./:/app
-      - /app/node_modules
+      - ./:/app:cached
+      - node_modules:/app/node_modules
     devices:
       - /dev/dri:/dev/dri
-    ports:
-      - '5173:5173'
+    network_mode: host
     ipc: host
+    develop:
+      watch:
+        - action: rebuild
+          path: package.json
+        - action: rebuild
+          path: package-lock.json
+
+volumes:
+  node_modules:
