--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,19 @@
 {
-  "name": "Album Viewer Dev Container",
-  "dockerComposeFile": "../compose.yaml",
-  "service": "devcontainer",
-  "postAttachCommand": "npm run dev",
-  "shutdownAction": "none",
-  "workspaceFolder": "/app",
+  "name": "Node.js Dev Container",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:24",
+  "remoteUser": "node",
+  "postCreateCommand": "npm install",
+  "mounts": [
+    "source=album_viewer_node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"
+  ],
   "customizations": {
     "vscode": {
       "extensions": [
-        "dbaeumer.vscode-eslint",
+        "Vue.volar",
+        "vitest.explorer",
         "esbenp.prettier-vscode",
-        "Vue.volar"
+        "dbaeumer.vscode-eslint"
       ]
     }
-  },
-  "remoteUser": "node",
-  "features": {
-    "ghcr.io/devcontainers/features/git:1": {}
   }
 }
