feat: add git feature to devcontainer configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,5 +14,11 @@
         "dbaeumer.vscode-eslint"
       ]
     }
+  },
+  "features": {
+    "ghcr.io/devcontainers/features/git:1" :
+    {
+      "version": "latest"   
+    }
   }
 }
