fix: update git feature configuration in devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,9 +16,8 @@
     }
   },
   "features": {
-    "ghcr.io/devcontainers/features/git:1" :
-    {
-      "version": "latest"   
+    "features": {
+      "ghcr.io/devcontainers/features/git:1": {}
     }
   }
 }
