--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
   "workspaceFolder": "/home/builduser/app",
   "remoteUser": "builduser",
   "postCreateCommand": "npm install",
+  "shutdownAction": "none",
   "customizations": {
     "vscode": {
       "extensions": [
