--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
   "service": "electron-app",
   "workspaceFolder": "/home/builduser/app",
   "remoteUser": "builduser",
-  "postCreateCommand": "npm install",
+  "postCreateCommand": "npm ci --prefer-offline || npm install",
   "shutdownAction": "none",
   "customizations": {
     "vscode": {
