Fix: Update dockerfile path in devcontainer configuration and adjust peer dependencies in package-lock

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   electron-app:
     build:
       context: ..
-      dockerfile: ./Dockerfile
+      dockerfile: .devcontainer/Dockerfile
 
     # 'user:' line must be absent to avoid sudo errors
 
