--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,8 @@
 {
   "name": "Electron Dev Container",
+  // "build": {
+  //   "dockerfile": "Dockerfile"
+  // },
   "dockerComposeFile": "docker-compose.yml",
   "service": "electron-app",
   "workspaceFolder": "/home/builduser/app",
@@ -18,5 +21,5 @@
   "features": {
     "ghcr.io/devcontainers/features/git:1": {}
   },
-  "postStartCommand": "sudo chown -R builduser:builduser /home/builduser/app && npm install && npm run dev"
+  "postStartCommand": "/usr/local/share/desktop-init.sh && npm install && npm run dev"
 }
